# mca-locator

./: bun.lockb  package.json  vite.config.ts
.history/: components_20240828001155.json  tailwind.config_20240828000830.js  tailwind.config_20240828002429.js
.history/src/: App_20240827224856.tsx  App_20240827224915.tsx  App_20240827225005.tsx  App_20240827225547.tsx  App_20240827230149.tsx  App_20240827233801.tsx  App_20240827234151.tsx  App_20240827235909.tsx  App_20240828000258.tsx  App_20240828000322.tsx  App_20240828000830.tsx  App_20240828001447.tsx  App_20240828001459.tsx  App_20240828001733.tsx  App_20240828002035.tsx  App_20240828002359.tsx  App_20240828002616.tsx  App_20240828002750.tsx  App_20240828003248.tsx  App_20240828003430.tsx  App_20240828003437.tsx  App_20240828003447.tsx  App_20240828003505.tsx  App_20240828003511.tsx  App_20240828004537.tsx  App_20240828004706.tsx  App_20240828010652.tsx  App_20240828010655.tsx  App_20240828021218.tsx  App_20240828021617.tsx  ChunkGrid_20240828003224.tsx  ChunkGrid_20240828003614.tsx  ChunkGrid_20240828003628.tsx  ChunkGrid_20240828003641.tsx  ChunkGrid_20240828003652.tsx  ChunkGrid_20240828003702.tsx  ChunkGrid_20240828003727.tsx  ChunkGrid_20240828003740.tsx  ChunkGrid_20240828003757.tsx  (+36 more)
.history/src-tauri/: tauri.conf_20240827223709.json
src/: App.tsx  CanvasWorldMap.tsx  biomeUtils.ts  main.tsx
src-tauri/: Cargo.toml  minecraft_world.db  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  main.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/world/: mod.rs  parser.rs  scanner.rs
(+2 files in other folders)
